--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,3 +1,25 @@
+.ActiveOption,
+.ActiveOption:hover {
+    color: red !important;
+    font-weight: 800;
+    text-decoration: none;
+    padding: 10px;
+}
+
+.Option,
+.Option:hover {
+    text-decoration: none;
+    color: green;
+    padding: 10px;
+
+}
+
+.navbar-brand a,
+.navbar-brand a:hover {
+    text-decoration: none;
+    color: white
+}
+
 .navbar {
     background-color: green;
     width: 100%;
