Cart View and Firebase added

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -24,3 +24,9 @@
     background-color: green;
     width: 100%;
 }
+
+@media (max-width: 400px) {
+    .navbar-toggler {
+        font-size: 0.75rem !important
+    }
+}
