--- a/src/components/CartWidget/CartWidget.css
+++ b/src/components/CartWidget/CartWidget.css
@@ -1,10 +1,22 @@
-.cartWidetContainer {
-    display: flex;
-    gap: 10px;
-    align-items: center;
-}
+/* .cartWidgetCounter {
+    color: white;
+    font-size: 20px;
+    text-decoration: none
+} */
+
 
 .cartWidgetCounter {
-    color: white;
-    font-size: 20px
+    float: right;
+    text-align: center;
+    border-radius: 50%;
+    background-color: #9ed699;
+    box-shadow: 0px 0px 9px 3px #3e533c;
+    color: #ffffff;
+    width: 20px;
+    height: 20px;
+    line-height: 20px;
+    font-size: 0.8rem;
+    position: relative;
+    left: 20px;
+    top: -10px
 }
