--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -1,4 +1,4 @@
-.card-img-top {
+/* .card-img-top {
     max-height: 250px;
 }
 
@@ -6,4 +6,27 @@
     max-width: 408px;
     margin: 0 auto;
 
+} */
+
+@media (min-width: 1000px) {
+    .imageColumn {
+        border-Right: groove green;
+    }
+}
+
+.imageContainer {
+    position: relative;
+    display: inline-block;
+}
+
+.tipoExcursion {
+    position: absolute;
+    bottom: 10px;
+    right: 20px;
+}
+
+@media (max-width: 1000px) {
+    .description {
+        border-top: groove green
+    }
 }
