--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -23,6 +23,7 @@
 .navbar {
     background-color: green;
     width: 100%;
+    box-shadow: 0px 10px 8px -6px rgb(0 0 0 / 50%);
 }
 
 @media (max-width: 400px) {
