--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,5 +1,16 @@
 .total {
     padding: 20px;
     border-bottom: 1px solid #E1E8EE;
-    /* align-items: center; */
+}
+
+.toast-body-cartItems {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.toast-body-text {
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px
 }
